# securifine

./: README.md  pyproject.toml  setup.py
docs/: architecture.md  cli-reference.md  dataset-validation.md  getting-started.md  integration-guide.md  safety-evaluation.md
examples/: sample_config.json  sample_config_reference.md  sample_dataset_manifest.json  sample_hook_config.json  sample_responses.json
src/securifine/: __init__.py  __main__.py  cli.py  config.py
src/securifine/core/: __init__.py  comparator.py  evaluator.py  reporter.py
src/securifine/datasets/: __init__.py  registry.py  validator.py
src/securifine/integration/: __init__.py  hooks.py
src/securifine/safety/: __init__.py  benchmarks.py  prompts.py
src/securifine/utils/: __init__.py  hashing.py  logging.py  paths.py
tests/: __init__.py  test_benchmarks.py  test_cli.py  test_comparator.py  test_evaluator.py  test_validator.py
